@@ -1,9 +1,10 @@
 package ohm.softa.a04;
 
 // musste hinzugefügt werden
+import java.lang.reflect.InvocationTargetException;
 import java.util.function.Function;
 
-public interface SimpleList <T> extends Iterable<T>{
+public interface SimpleList<T> extends Iterable<T>{
 	// Fügt Objekt ans Listenende
 	void add(T item);
 
@@ -14,11 +15,12 @@ public interface SimpleList <T> extends Iterable<T>{
 	default void addDefault(Class<T> c){
 		// neue Instanz erstellen und hinzufügen
 		try {
-			this.add(c.newInstance());
+			this.add(c.getDeclaredConstructor().newInstance());
+
 		}
 		// Wenn Erstellung nicht möglich
 		// Exception werfen
-		catch (InstantiationException | IllegalAccessException e) {
+		catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			e.printStackTrace();
 		}
 
@@ -26,7 +28,8 @@ public interface SimpleList <T> extends Iterable<T>{
 
 	// T = Typ des Inputs
 	// R = Typ des Ergebnisses
-	// default <R> SimpleList<R> -> was wird hier zurückgegeben? was passiert hier eigentlich?
+	// default <R> SimpleList<R>
+	// <R> wird bis jetzt noch nicht erwähnt, daher muss es hier erwähnt werden
 	default <R> SimpleList<R> map (Function<T,R> transform)
 	{
 		// Neue, leere Liste
@@ -34,10 +37,10 @@ public interface SimpleList <T> extends Iterable<T>{
 
 		// Wenn Erstellung von neuer Instanz möglich
 		try {
-			result = (SimpleList<R>) this.getClass().newInstance();
+			result = (SimpleList<R>) getClass().getDeclaredConstructor().newInstance();
 		}
 		// Wenn Erstellung von neuer Instanz nicht möglich
-		catch (InstantiationException | IllegalAccessException e) {
+		catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			result = new SimpleListImpl<R>();
 		}
 
@@ -57,14 +60,14 @@ public interface SimpleList <T> extends Iterable<T>{
 
 		// Wenn neue Instanz möglich
 		try {
-			result = (SimpleList<T>) getClass().newInstance();
+			result = (SimpleList<T>) getClass().getDeclaredConstructor().newInstance();
 		}
 		// Wenn neue Instanz nicht möglich
-		catch (InstantiationException | IllegalAccessException e) {
+		catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			// you can replace the type arguments required to invoke the constructor
 			// of a generic class with an empty set of type arguments (<>) as long as
 			// the compiler can determine, or infer, the type arguments from the context
-			result = new SimpleListImpl<>();
+			result = new SimpleListImpl<T>();
 		}
 
 		// Für jedes T wird Filter getestet und hinzugefügt
